--- a/package.json
+++ b/package.json
@@ -5,20 +5,28 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "serve": "nodemon src/server/index.ts",
+    "serve": "yarn swagger && yarn start",
+    "start": "nodemon src/server/index.ts",
+    "swagger": "node ./swagger/swagger.js",
     "build": "tsc --project ./"
   },
   "author": "mao",
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.1",
     "@types/node": "^18.15.3",
     "typescript": "^5.0.2"
   },
   "dependencies": {
     "body-parser": "^1.20.2",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
     "nodemon": "^2.0.21",
+    "swagger-autogen": "^2.23.1",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^4.6.2",
     "ts-node": "^10.9.1",
     "yarn": "^1.22.19"
   }
